pdf: prevent overflow on pdf-text div

--- a/less/paperhive/pdf.less
+++ b/less/paperhive/pdf.less
@@ -14,6 +14,7 @@ pdf-full {
   .ph-selection(none);
 
   & > .ph-pdf-text {
+    overflow: hidden;
     position: absolute;
     left: 0;
     top: 0;
